[package]
name = "broker"
version = "0.1.0"
authors = ["Blazej Bucko <blazej.bucko@gmail.com>"]
edition = "2018"

[dependencies]
core = {path = "../core"}
log = "0.4"
bytes = "0.4"
futures-preview = "0.3.0-alpha"
futures-util-preview = "0.3.0-alpha"

[dev-dependencies]
mqtt = {path = "../mqtt"}
tokio = "0.2.0-alpha"
tokio-sync = "0.2.0-alpha"