[package]
name = "broker"
version = "0.1.0"
authors = ["Blazej Bucko <blazej.bucko@gmail.com>"]
edition = "2018"

[dependencies]
core = {path = "../core"}
tracing = {version = "0.1", features = ["std"], default-features = false}
bytes = "0.5"

[dev-dependencies]
mqtt = {path = "../mqtt"}
futures = {version = "0.3", features = ["executor"]}
tokio = {version = "0.2", features = ["sync"]}
tokio-util = {version = "0.2", features = ["codec"]}