[package]
name = "mqtt"
version = "0.1.0"
authors = ["Blazej Bucko <blazej.bucko@gmail.com>"]
edition = "2018"

[dependencies]
tracing = "0.1"
bytes = "0.5"
num-traits = "0.2"

tokio = {version = "0.2", features = ["sync", "stream"]}
tokio-util = {version = "0.2", features = ["codec"]}

futures = {version = "0.3", features = ["default"]}

broker = {path = "../broker"}
core = {path = "../core"}