[package]
name = "mqtt"
version = "0.1.0"
authors = ["Blazej Bucko <blazej.bucko@gmail.com>"]
edition = "2018"

[dependencies]
mqttrs = { git = "https://github.com/bbucko/mqttrs", branch = "0.3.1" }

bytes = "1"

tracing = { version = "0.1", features = ["std"], default-features = false }
num-traits = "0.2"
enum-primitive-derive = "0.1"

tokio = { version = "1.6", features = ["sync"] }
tokio-stream = "0.1"
tokio-util = { version = "0.6", features = ["codec"] }

futures = { version = "0.3", features = ["default"] }

broker = { path = "../broker" }
core = { path = "../core" }