[package]
name = "raqqietka"
version = "0.1.0"
authors = ["Blazej Bucko <blazej.bucko@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"

tokio = {version = "0.2", features = ["sync", "tcp", "rt-threaded", "macros", "io-util"]}
tokio-util = {version = "0.2", features = ["codec"]}

futures-util = "0.3"

tracing = {version = "0.1", features = ["std"]}
tracing-subscriber = {version = "0.2.0-alpha", features = ["fmt", "ansi"]}
tracing-futures = { version = "0.1", features = ["std-future"]}

mqtt = { path = "../mqtt" }
core = { path = "../core" }
broker = { path = "../broker" }