[package]
name = "raqqietka"
version = "0.1.0"
authors = ["Blazej Bucko <blazej.bucko@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"

tokio = {version = "1.6", features = ["sync", "macros", "io-util", "rt", "rt-multi-thread", "net"]}
tokio-util = {version = "0.6", features = ["codec"]}
tokio-stream = "0.1"

futures-util = "0.3"

tracing = {version = "0.1", features = ["std"], default-features = false}
tracing-subscriber = {version = "0.2", features = ["fmt", "ansi", "env-filter", "chrono", "smallvec"], default-features = false}
tracing-futures = { version = "0.2", features = ["std-future"], default-features = false}

mqtt = { path = "../mqtt" }
core = { path = "../core" }
broker = { path = "../broker" }